--- a/app/src/main/res/layout-land/activity_play_video.xml
+++ b/app/src/main/res/layout-land/activity_play_video.xml
@@ -46,6 +46,8 @@
                             android:id="@+id/video_view_selected"
                             android:layout_width="600dp"
                             android:layout_height="wrap_content"
+                            android:layout_marginLeft="8dp"
+                            android:layout_marginStart="8dp"
                             app:layout_constraintEnd_toEndOf="parent"
                             app:layout_constraintStart_toStartOf="parent"
                             app:layout_constraintTop_toTopOf="parent" />
