--- a/app/src/main/res/layout-land/activity_play_video.xml
+++ b/app/src/main/res/layout-land/activity_play_video.xml
@@ -150,19 +150,20 @@
                                    app:layout_constraintTop_toTopOf="parent" />
 
                                <SeekBar
-                                android:id="@+id/seek_bar_selected"
-                                android:layout_width="match_parent"
-                                android:layout_height="match_parent"
-                                android:clickable="false"
-                                android:focusable="false"
-                                android:progressDrawable="@android:color/transparent"
-                                android:thumb="@drawable/thumb"
-                                app:layout_constraintBottom_toBottomOf="parent"
-                                app:layout_constraintEnd_toEndOf="parent"
-                                app:layout_constraintHorizontal_bias="0.085"
-                                app:layout_constraintStart_toStartOf="parent"
-                                app:layout_constraintTop_toTopOf="parent"
-                                app:layout_constraintVertical_bias="0.0" />
+                                   android:id="@+id/seek_bar_selected"
+                                   android:layout_width="match_parent"
+                                   android:layout_height="match_parent"
+                                   android:layout_marginLeft="100dp"
+                                   android:clickable="false"
+                                   android:focusable="false"
+                                   android:progressDrawable="@android:color/transparent"
+                                   android:thumb="@drawable/thumb"
+                                   app:layout_constraintBottom_toBottomOf="parent"
+                                   app:layout_constraintEnd_toEndOf="parent"
+                                   app:layout_constraintHorizontal_bias="0.085"
+                                   app:layout_constraintStart_toStartOf="parent"
+                                   app:layout_constraintTop_toTopOf="parent"
+                                   app:layout_constraintVertical_bias="0.0" />
 
                         </RelativeLayout>
                 </ScrollView>
