--- a/app/src/main/res/layout-land/activity_play_video.xml
+++ b/app/src/main/res/layout-land/activity_play_video.xml
@@ -27,7 +27,7 @@
 
             <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="350dp"
                 android:layout_marginTop="65dp"
                 android:orientation="horizontal"
                 app:layout_constraintTop_toTopOf="parent">
@@ -123,7 +123,7 @@
             <android.support.constraint.ConstraintLayout
                 android:id="@+id/constraintLayout"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
+                android:layout_height="wrap_content"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
@@ -134,38 +134,38 @@
                     android:layout_width="match_parent"
                     android:layout_height="match_parent">
 
-                           <RelativeLayout
-                            android:id="@+id/time_lines_container"
+                    <RelativeLayout
+                        android:id="@+id/time_lines_container"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent">
+
+                        <LinearLayout
+                            android:id="@+id/ll_main_playvideo"
                             android:layout_width="match_parent"
-                            android:layout_height="match_parent">
+                            android:layout_height="wrap_content"
+                            android:orientation="vertical"
+                            app:layout_constraintBottom_toBottomOf="parent"
+                            app:layout_constraintEnd_toEndOf="parent"
+                            app:layout_constraintStart_toStartOf="parent"
+                            app:layout_constraintTop_toTopOf="parent" />
 
-                               <LinearLayout
-                                   android:id="@+id/ll_main_playvideo"
-                                   android:layout_width="match_parent"
-                                   android:layout_height="wrap_content"
-                                   android:orientation="vertical"
-                                   app:layout_constraintBottom_toBottomOf="parent"
-                                   app:layout_constraintEnd_toEndOf="parent"
-                                   app:layout_constraintStart_toStartOf="parent"
-                                   app:layout_constraintTop_toTopOf="parent" />
+                        <SeekBar
+                            android:id="@+id/seek_bar_selected"
+                            android:layout_width="match_parent"
+                            android:layout_height="match_parent"
+                            android:layout_marginLeft="200dp"
+                            android:clickable="false"
+                            android:focusable="false"
+                            android:progressDrawable="@android:color/transparent"
+                            android:thumb="@drawable/thumb"
+                            app:layout_constraintBottom_toBottomOf="parent"
+                            app:layout_constraintEnd_toEndOf="parent"
+                            app:layout_constraintHorizontal_bias="0.085"
+                            app:layout_constraintStart_toStartOf="parent"
+                            app:layout_constraintTop_toTopOf="parent"
+                            app:layout_constraintVertical_bias="0.0" />
 
-                               <SeekBar
-                                   android:id="@+id/seek_bar_selected"
-                                   android:layout_width="match_parent"
-                                   android:layout_height="match_parent"
-                                   android:layout_marginLeft="100dp"
-                                   android:clickable="false"
-                                   android:focusable="false"
-                                   android:progressDrawable="@android:color/transparent"
-                                   android:thumb="@drawable/thumb"
-                                   app:layout_constraintBottom_toBottomOf="parent"
-                                   app:layout_constraintEnd_toEndOf="parent"
-                                   app:layout_constraintHorizontal_bias="0.085"
-                                   app:layout_constraintStart_toStartOf="parent"
-                                   app:layout_constraintTop_toTopOf="parent"
-                                   app:layout_constraintVertical_bias="0.0" />
-
-                        </RelativeLayout>
+                    </RelativeLayout>
                 </ScrollView>
 
 
