--- a/app/src/main/res/layout-land/activity_start.xml
+++ b/app/src/main/res/layout-land/activity_start.xml
@@ -109,6 +109,7 @@
                             android:layout_marginTop="12dp"
                             android:background="@drawable/style_input"
                             android:padding="5dp"
+                            android:visibility="invisible"
                             app:layout_constraintStart_toStartOf="parent"
                             app:layout_constraintTop_toBottomOf="@+id/radio_button_insert" />
 
