--- a/app/src/main/res/layout-land/activity_my_video.xml
+++ b/app/src/main/res/layout-land/activity_my_video.xml
@@ -17,6 +17,7 @@
         android:layout_marginBottom="8dp"
         android:layout_marginLeft="16dp"
         android:layout_marginStart="16dp"
+        android:layout_marginTop="50dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -32,7 +33,6 @@
                 android:id="@+id/search_video"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="65dp"
                 app:defaultQueryHint="@string/search"
                 app:layout_constraintTop_toTopOf="parent">
 
@@ -53,12 +53,12 @@
                 android:numColumns="auto_fit"
                 android:stretchMode="columnWidth"
                 android:verticalSpacing="16dp"
-                tools:listitem="@layout/item_video"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/search_video"
-                app:layout_constraintVertical_bias="0.0" />
+                app:layout_constraintVertical_bias="0.0"
+                tools:listitem="@layout/item_video" />
 
         </android.support.constraint.ConstraintLayout>
     </ScrollView>
